implement 'open rom' dialog

--- a/src/age_js/src/index.html
+++ b/src/age_js/src/index.html
@@ -13,6 +13,9 @@
         body {
             height: 100vh;
             margin: 0;
+            font-family: sans-serif;
+            background-color: black;
+            color: white;
         }
     </style>
 </head>
