AGE-JS: change html title

--- a/src/age_js/src/index.html
+++ b/src/age_js/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AGE-JS</title>
+    <title>AGE - Online Gameboy Emulator</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
