AGE-JS: add 'noopener' to links

--- a/src/age_js/src/index.html
+++ b/src/age_js/src/index.html
@@ -49,7 +49,10 @@ a Gameboy Emulator brought to your Browser using WebAssembly and Angular">
 
     <div class="loading-screen">
         Visit the
-        <a href="https://gitlab.com/csprenger/AGE" target="_blank" rel="noreferrer">AGE Git Repository</a>
+        <a href="https://gitlab.com/csprenger/AGE"
+           target="_blank"
+           rel="noopener nofollow noreferrer"
+           title="Link to the AGE git repository">AGE git repository</a>
         to find out more about AGE - Another Gameboy Emulator.
     </div>
 
