AGE-JS: add web app manifest

--- a/src/age_js/src/index.html
+++ b/src/age_js/src/index.html
@@ -6,8 +6,8 @@
     <title>AGE - Online Gameboy Emulator</title>
     <base href="/">
 
-    <meta name="Description" content="written by Christoph Sprenger,
-a Gameboy Emulator brought to your Browser using WebAssembly and Angular">
+    <meta name="Description" content="a Gameboy Emulator brought to your Browser using WebAssembly and Angular,
+written by Christoph Sprenger">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" type="image/png" href="assets/icon-16x16.png" sizes="16x16">
@@ -18,6 +18,9 @@ a Gameboy Emulator brought to your Browser using WebAssembly and Angular">
     <link rel="apple-touch-icon" href="assets/icon-152x152.png" sizes="152x152">
     <link rel="apple-touch-icon" href="assets/icon-167x167.png" sizes="167x167">
     <link rel="apple-touch-icon" href="assets/icon-180x180.png" sizes="180x180">
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
 
     <style>
         body {
