age-js: split application and library code

--- a/src/age_js/src/age-app/index.html
+++ b/src/age_js/src/age-app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AGE - Online Gameboy Emulator</title>
+    <title>AGE - Another Gameboy Emulator</title>
     <base href="/">
 
     <meta name="Description" content="a Gameboy Emulator brought to your Browser using WebAssembly and Angular,
@@ -19,7 +19,7 @@ written by Christoph Sprenger">
     <link rel="apple-touch-icon" href="assets/icon-167x167.png" sizes="167x167">
     <link rel="apple-touch-icon" href="assets/icon-180x180.png" sizes="180x180">
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#000000">
 
     <style>
