age-js: add age-lib root component

--- a/src/age_js/src/age-app/index.html
+++ b/src/age_js/src/age-app/index.html
@@ -23,8 +23,13 @@ written by Christoph Sprenger">
     <meta name="theme-color" content="#000000">
 
     <style>
+        html {
+            height: 100%;
+        }
+
         body {
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             margin: 0;
             font-family: sans-serif;
             background-color: black;
