--- a/src/age_js/src/age-app/index.html
+++ b/src/age_js/src/age-app/index.html
@@ -24,13 +24,22 @@ written by Christoph Sprenger">
 
     <style>
         html {
+            /*
+            let <html> match the size of the Initial Containing Block
+             => on mobile devices it fills exactly the visible height,
+                whether or not the address bar is shown
+            (see also: https://developers.google.com/web/updates/2016/12/url-bar-resizing)
+            */
+            position: fixed;
             height: 100%;
+            width: 100%;
         }
 
         body {
-            width: 100%;
             height: 100%;
+            width: 100%;
             margin: 0;
+            padding: 0;
             font-family: sans-serif;
             background-color: black;
             color: white;
@@ -41,39 +50,6 @@ written by Christoph Sprenger">
             text-align: center;
         }
 
-        .age-ui-input {
-            background-color: #202020;
-            color: #C8C8C8;
-            padding: .1em;
-            border: double #404040;
-        }
-
-        .age-ui {
-            background-color: #404040;
-            color: #B8B8B8;
-            cursor: default;
-        }
-
-        .age-ui-error {
-            color: #FFA0A0;
-        }
-
-        .age-ui-highlight {
-            color: #C8C8C8;
-        }
-
-        .age-ui-title {
-            font-size: x-large;
-            font-weight: bold;
-            color: #C8C8C8;
-        }
-
-        .age-ui-subtitle {
-            font-size: large;
-            font-weight: bold;
-            color: #C8C8C8;
-        }
-
         .age-ui-clickable {
             cursor: pointer;
             color: #98A8E0;
@@ -82,10 +58,6 @@ written by Christoph Sprenger">
 
         .age-ui-clickable:hover {
             color: #E0F0FF;
-        }
-
-        .age-ui-big-icon {
-            font-size: xx-large;
         }
     </style>
 </head>
